# robot-valley

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
cmake/: FindSDL2.cmake  FindSDL2_ttf.cmake
data/instructions/: instructions.txt
data/lvl/: test.csv
header/: Board.hpp  BoardInterface.hpp  BoardIterator.hpp  BoardIteratorInterface.hpp  BoardLoader.hpp  FixedBoard.hpp  HorizontalLinearizer2D.hpp  Linearizer2D.hpp  Tile.hpp  TileInterface.hpp  VerticalLinearizer2D.hpp
header/board/: Board.hpp  BoardIterator.hpp  BoardLoader.hpp  FixedBoard.hpp
header/bot/: BotManager.hpp  SimpleBot.hpp  VectorBotManager.hpp  bot.hpp
header/game/: Game.hpp  GameWriter.hpp  SimpleGame.hpp
header/mixins/: Copiable.hpp  Localizable2D.hpp  Movable2D.hpp
header/utils/: HorizontalLinearizer2D.hpp  Linearizer2D.hpp  Point2D.hpp  VerticalLinearizer2D.hpp
robot-valley/: CMakeLists.txt
robot-valley-tests/: CMakeLists.txt  FixedBoardTest.cpp  SimpleGameTest.cpp  VerticalLinearizer2DTest.cpp
robot-valley/header/: Tile.hpp  TileInterface.hpp  WallTile.hpp
robot-valley/header/board/: Board.hpp  BoardIterator.hpp  BoardLoader.hpp
robot-valley/header/bot/: AutoBot.hpp  SimpleBot.hpp  StupidBot.hpp  bot.hpp
robot-valley/header/game/: Game.hpp  GameLoader.hpp  SimpleGame.hpp
robot-valley/header/mixins/: Copiable.hpp
robot-valley/header/scallop/: SDLScallopShell.hpp  ScallopShellDataInterface.hpp  ScallopShellInterface.hpp  SimpleScallopShellData.hpp
robot-valley/header/tile/: FactoryTile.hpp  Tile.hpp  TileInterface.hpp  WallTile.hpp
robot-valley/header/utils/: HorizontalLinearizer2D.hpp  Point2D.hpp
robot-valley/header/viewer/: ScallopGameViewer.hpp
robot-valley/src/: CMakeLists.txt  Tile.cpp  WallTile.cpp  main.cpp
robot-valley/src/board/: BoardIterator.cpp
robot-valley/src/bot/: AutoBot.cpp  SimpleBot.cpp  StupidBot.cpp  VectorBotManager.cpp
robot-valley/src/game/: CMakeLists.txt  GameLoader.cpp  GameWriter.cpp  SimpleGame.cpp
robot-valley/src/scallop/: SDLScallopShell.cpp  SimpleScallopShellData.cpp
robot-valley/src/tile/: FactoryTile.cpp  Tile.cpp  WallTile.cpp
robot-valley/src/utils/: Linearizer2D.cpp  VerticalLinearizer2D.cpp
robot-valley/src/viewer/: ScallopGameViewer.cpp
src/: Board.cpp  BoardIterator.cpp  BoardLoader.cpp  FixedBoard.cpp  HorizontalLinearizer2D.cpp  Linearizer2D.cpp  Tile.cpp  VerticalLinearizer2D.cpp  main.cpp
src/board/: BoardIterator.cpp  BoardLoader.cpp  FixedBoard.cpp
src/bot/: SimpleBot.cpp  VectorBotManager.cpp
src/game/: SimpleGame.cpp
src/utils/: HorizontalLinearizer2D.cpp  Linearizer2D.cpp  VerticalLinearizer2D.cpp
tests/: FixedBoardTest.cpp  GameFilesTest.cpp  GameFilesTest.cpp.bugs  HorizontalLinearizer2DTest.cpp  SimpleTest.cpp  TEST_init.csv  TileTest.cpp  TileTest.cpp.bugs  VerticalLinearizer2DTest.cpp
