# Include cpp files
FIND_PACKAGE(Boost COMPONENTS unit_test_framework)
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_ttf REQUIRED)

IF(Boost_FOUND)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/robot-valley/header)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SDL2_TTF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

# sources
FILE(GLOB TESTS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

# executable
ADD_EXECUTABLE(robot-valley-tests ${ROBOT_VALLEY_SOURCES} ${TESTS_SOURCES})

TARGET_LINK_LIBRARIES(robot-valley-tests ${SDL2_LIBRARY})
TARGET_LINK_LIBRARIES(robot-valley-tests ${SDL2_TTF_LIBRARY})
TARGET_LINK_LIBRARIES(robot-valley-tests ${Boost_LIBRARIES})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

MESSAGE("${Boost_LIBRARIES}")
MESSAGE("${Boost_LIBRARY_DIRS}")

# c++ configuration
SET_PROPERTY(TARGET robot-valley-tests PROPERTY CXX_STANDARD 14)
SET_PROPERTY(TARGET robot-valley-tests PROPERTY CXX_STANDARD_REQUIRED ON)
ENDIF()