# headers directory
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_ttf REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/robot-valley/header)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SDL2_TTF_INCLUDE_DIR})

# source scanning
SET(ROBOT_VALLEY_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Tile.cpp ${CMAKE_CURRENT_SOURCE_DIR}/WallTile.cpp)

SUBDIRLIST(SUBDIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
IF(NOT ("${SUBDIRECTORIES}" STREQUAL ""))
	FOREACH(SUBDIRECTORY ${SUBDIRECTORIES})
		ADD_SUBDIRECTORY(${SUBDIRECTORY})
	ENDFOREACH()
endif()

# add executable
ADD_EXECUTABLE(robot-valley ${ROBOT_VALLEY_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

SET(ROBOT_VALLEY_SOURCES ${ROBOT_VALLEY_SOURCES} PARENT_SCOPE)

# c++ configuration
SET_PROPERTY(TARGET robot-valley PROPERTY CXX_STANDARD 14)
SET_PROPERTY(TARGET robot-valley PROPERTY CXX_STANDARD_REQUIRED ON)

TARGET_LINK_LIBRARIES(robot-valley ${SDL2_LIBRARY})
TARGET_LINK_LIBRARIES(robot-valley ${SDL2_TTF_LIBRARY})