# Include current cpp files
FILE(GLOB DIRECTORY_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

# Include subdirectories
SUBDIRLIST(SUBDIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
IF(NOT ("${SUBDIRECTORIES}" STREQUAL ""))
	FOREACH(SUBDIRECTORY ${SUBDIRECTORIES})
		ADD_SUBDIRECTORY(${SUBDIRECTORY})
	ENDFOREACH()
endif()

SET(ROBOT_VALLEY_SOURCES ${ROBOT_VALLEY_SOURCES} ${DIRECTORY_SOURCES} PARENT_SCOPE)